master-overlay-secondary z-index setting to resolve failing tests

--- a/app/assets/stylesheets/modules/_env.css.scss
+++ b/app/assets/stylesheets/modules/_env.css.scss
@@ -11,7 +11,7 @@
 
   // With our styles, capybara-screenshot shows the page with the bare minimum height of something
   // like 200px, not enough to see anything.  This forces it to use a taller height.
-  .wrap { min-height: 1000px; }
+  .wrap { min-height: 1200px; }
 
   // Disable CSS transitions to avoid waiting for animations no one will see
   * { transition: none !important; }
